syntax = "proto3";

option csharp_namespace = "Mercury.Engine.API.Services";

package user;

service User{
    rpc GetUserByTag (GetUserByTagRequest) returns (GetUserByTagReply);
}

message GetUserByTagRequest{
    string userTag = 1;
}

message GetUserByTagReply{
    int32 userId = 1;
    string userName = 2;
}